--- a/app.wxss
+++ b/app.wxss
@@ -19,9 +19,18 @@
    font-size: 24rpx;
    line-height: 1;
 }
+.fs28 {
+   font-size: 28rpx;
+   line-height: 1;
+}
 .fs32 {
    font-size: 32rpx;
    line-height: 1;
+}
+
+/*字体颜色*/
+.co333 {
+   color: #333;
 }
 
 /*图片100%*/
