--- a/components/header/header.wxml
+++ b/components/header/header.wxml
@@ -1,5 +1,5 @@
 <!--components/header/index.wxml-->
-<view class="header flex flex-ac">
+<view class="header flex flex-ac {{isIpx ? 'header-ipx' : ''}}">
    <view class="input-group pos-r">
       <input class="input-control fs24"/>
       <view class="search-box">
