添加公告和关于

--- a/app.wxss
+++ b/app.wxss
@@ -23,6 +23,10 @@
    font-size: 28rpx;
    line-height: 1;
 }
+.fs30 {
+   font-size: 28rpx;
+   line-height: 1;
+}
 .fs32 {
    font-size: 32rpx;
    line-height: 1;
