--- a/components/tabbar/tabbar.wxml
+++ b/components/tabbar/tabbar.wxml
@@ -6,7 +6,7 @@
    <!--<view class="logo-box">-->
       <!--<image src="/assets/img/logo.png"></image>-->
    <!--</view>-->
-   <view class="me-box">
+   <view class="me-box" bindtap="intoMine">
       <image src="/assets/img/me.png"></image>
    </view>
 </view>
