--- a/pages/noteList/noteList.wxml
+++ b/pages/noteList/noteList.wxml
@@ -9,14 +9,13 @@
       <!--<block wx:for="{{noteList}}" wx:key="index">-->
          <!--<view class="note-item flex flex-ac">{{item}}</view>-->
       <!--</block>-->
-      <block wx:for="{{noteList}}" wx:key="index">
-         <view class="note-item-02" animation="{{item.animationData}}" style="right:({{item.tx}}px); top: {{item.top}}px;">
-            <view class="flex flex-ac pos-r">
+      <block wx:for="{{doommData}}" wx:key="id">
+         <view wx:if="{{item.display}}" class="note-item-02" style="animation: first {{item.time}}s linear forwards;top:{{item.top}}px;">
+            <view class="flex flex-ac">
                <view class="note-icon">
                   <image src="/assets/img/note/note_icon32.png"></image>
                </view>
                <view class="note-text-box pos-r">
-                  <!--<view class="note-text">我说你的是的是一说，山东分局四分司法解释就放肆，的...</view>-->
                   <view class="note-text"></view>
                   <view class="note-bg">
                      <image src="/assets/img/note/note_bg01.png"></image>
@@ -25,21 +24,5 @@
             </view>
          </view>
       </block>
-      <!--<block wx:for="{{ dmData }}" wx:key="{{ item.id }}">-->
-         <!--<view class="note-item-02" style="top:{{ item.top }}px; animation: dmAnimation {{item.time}}s linear {{ index*3 }}s;">-->
-            <!--<view class="flex flex-ac pos-r">-->
-               <!--<view class="note-icon">-->
-                  <!--<image src="/assets/img/note/note_icon32.png"></image>-->
-               <!--</view>-->
-               <!--<view class="note-text-box pos-r">-->
-                  <!--&lt;!&ndash;<view class="note-text">我说你的是的是一说，山东分局四分司法解释就放肆，的...</view>&ndash;&gt;-->
-                  <!--<view class="note-text">{{item.name}}</view>-->
-                  <!--<view class="note-bg">-->
-                     <!--<image src="/assets/img/note/note_bg01.png"></image>-->
-                  <!--</view>-->
-               <!--</view>-->
-            <!--</view>-->
-         <!--</view>-->
-      <!--</block>-->
    </view>
 </view>
