--- a/pages/noteList/noteList.wxml
+++ b/pages/noteList/noteList.wxml
@@ -13,7 +13,7 @@
          <view wx:if="{{item.display}}" class="note-item-02" style="animation: first {{item.time}}s linear forwards;top:{{item.top}}px;">
             <view class="flex flex-ac">
                <view class="note-icon">
-                  <image src="/assets/img/note/note_icon32.png"></image>
+                  <image src="{{'/assets/img/note/note_icon1'+ item.icon + '.png'}}"></image>
                </view>
                <view class="note-text-box pos-r">
                   <view class="note-text"></view>
