--- a/pages/noteList/noteList.wxml
+++ b/pages/noteList/noteList.wxml
@@ -3,7 +3,7 @@
    <view class="bg-box">
       <image src="/assets/img/bg.png"></image>
    </view>
-   <header id = 'header' isIpx="{{isIpx}}"/>
+   <header id = 'header' back/>
    <tabbar id = 'tabBar'/>
    <view class="note-list">
       <!--<block wx:for="{{noteList}}" wx:key="index">-->
