--- a/components/tabbar/tabbar.wxss
+++ b/components/tabbar/tabbar.wxss
@@ -2,9 +2,10 @@
 @import "/app.wxss";
 
 .tabbar {
-   position: absolute;
+   position: fixed;
    left: 0;
    bottom: 0;
+   z-index: 99;
    
    width: 670rpx;
    height: 135rpx;
