--- a/pages/mine/notice/notice.wxml
+++ b/pages/mine/notice/notice.wxml
@@ -1,5 +1,8 @@
 <!--pages/mine/notice/notice.wxml-->
 <view class="container">
+   <view class="bg-box">
+      <image src="/assets/img/bg.png"></image>
+   </view>
    <view class="notice">
       <view class="notice-content fs32">
          欢迎来到医学记: )
