--- a/pages/noteList/noteList.wxml
+++ b/pages/noteList/noteList.wxml
@@ -4,11 +4,13 @@
       <image src="/assets/img/bg.png"></image>
    </view>
    <header id = 'header' back/>
-   <tabbar id = 'tabBar'/>
-   <view class="note-list">
-      <!--<block wx:for="{{noteList}}" wx:key="index">-->
-         <!--<view class="note-item flex flex-ac">{{item}}</view>-->
-      <!--</block>-->
+   <tabbar id = 'tabBar' bindmyevent="toggleList"/>
+   <view wx:if="{{listFlag}}" class="note-list" style="padding-top: {{hHeight}}px; padding-bottom: {{tHeight}}px;">
+      <block wx:for="{{noteList}}" wx:key="index">
+         <scroll-view class="note-item flex flex-ac {{noteList.length == index + 1 ? '' : 'note-item-mb'}}">{{item.name}}</scroll-view>
+      </block>
+   </view>
+   <view wx:if="{{!listFlag}}" class="note-list">
       <block wx:for="{{doommData}}" wx:key="id">
          <view wx:if="{{item.display}}" class="note-item-02" style="animation: first {{item.time}}s linear forwards;top:{{item.top}}px;">
             <view class="flex flex-ac">
