--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -4,7 +4,7 @@
       <image src="/assets/img/bg.png"></image>
    </view>
    <header id="header" />
-   <view class="notebook-list">
+   <view class="notebook-list" style="padding-top: {{hHeight}}px;">
       <block wx:for="{{notebookList}}" wx:key="index">
          <view class="notebook-item flex flex-ac flex-jc" bindtap="intoNoteList">
             <view class="notebook-item-block"></view>
