--- a/app.wxss
+++ b/app.wxss
@@ -36,10 +36,26 @@
 .co333 {
    color: #333;
 }
+.co939393 {
+  color: #939393;
+}
 
 /*背景颜色*/
-.back_f5ae66 {
+.backf5ae66 {
    background-color: #f5ae66;
+}
+.backf9f5eb {
+  background-color: #f9f5eb;
+}
+.backf5f5f5 {
+  background-color: #f5f5f5;
+}
+.backfff {
+  background-color: #fff;
+}
+
+.fw {
+  font-weight: bold;
 }
 
 
@@ -97,4 +113,21 @@ image {
 }
 .flex-je {
    justify-content: flex-end;
+}
+
+/*按钮*/
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 154rpx;
+  background-color: #f5ae66;
+}
+.save {
+  width: 147rpx;
+  height: 67rpx;
 }
