--- a/app.wxss
+++ b/app.wxss
@@ -131,3 +131,13 @@ image {
   width: 147rpx;
   height: 67rpx;
 }
+
+/* 获取用户信息 */
+.btn-user {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height:100%;
+   background-color: transparent;
+}
