--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -6,16 +6,18 @@
       <image src="/assets/img/bg.png"></image>
    </view>
    <header id="header"/>
-   <view wx:if="{{listFlag == 0}}" class="notebook-list" style="padding-top: {{hHeight}}px;">
-      <block wx:for="{{notebookList}}" wx:key="index">
-         <view class="notebook-item flex flex-ac flex-jc" bindtap="intoNoteList" data-id = "{{item.mean_cate_id}}">
-            <view class="notebook-item-block"></view>
-            <view class="notebook-item-text fs32">{{item.cate_name}}</view>
-            <view class="notebook-item-block"></view>
-         </view>
-      </block>
+   <view>
+      <view wx:if="{{listFlag === 0}}" class="notebook-list" style="padding-top: {{hHeight}}px;padding-bottom: {{tHeight}}px;">
+         <block wx:for="{{notebookList}}" wx:key="index">
+            <view class="notebook-item flex flex-ac flex-jc" bindtap="intoNoteList" data-id = "{{item.mean_cate_id}}">
+               <view class="notebook-item-block"></view>
+               <view class="notebook-item-text fs32">{{item.cate_name}}</view>
+               <view class="notebook-item-block"></view>
+            </view>
+         </block>
+      </view>
+      <danmu wx:else id='danmu' noteList="{{noteList}}" listFlag="{{listFlag}}"/>
    </view>
-   <danmu id='danmu' noteList="{{noteList}}" listFlag="{{listFlag}}"/>
    <tabbar id="tabbar"></tabbar>
    <toast id="toast"></toast>
 </view>
