--- a/pages/note/note.wxml
+++ b/pages/note/note.wxml
@@ -1,39 +1,47 @@
 <!--pages/note/note.wxml-->
  <view class="container">
-    <view class="box cate-box backfff">
-        <view class="picker cate-picker flex flex-ac flex-js">
-            <view class="fs32">所在科室</view>
-            <view class="flex flex-ac fs24 co939393">
-                <view>请选择</view>
-                <view class="right-icon">
-                    <image src="/assets/img/right.png" />
+    <form bindsubmit="handleAddNote">
+        <view class="box cate-box backfff">
+            <picker name="cateIdx" bindchange="handleChangeCate" value="{{index}}" range-key="sub_cate_name" range="{{subCateList}}">
+                <view class="picker cate-picker flex flex-ac flex-js">
+                    <view class="fs32">所在科室</view>
+                    <view class="flex flex-ac fs24 co939393">
+                        <view>{{cateName}}</view>
+                        <view class="right-icon">
+                            <image src="/assets/img/right.png" />
+                        </view>
+                    </view>
                 </view>
+            </picker>
+            <view class="input-control">
+                <input class="fs28" type="text" placeholder="若未找到对应科室，请点击自行输入" placeholder-class="fs24 co939393" />
             </view>
         </view>
-        <view class="input-control">
-            <input class="fs28" type="text" placeholder="若未找到对应科室，请点击自行输入" placeholder-class="fs24 co939393" />
-        </view>
-    </view>
-    <view class="box sub-box backfff">
-        <view class="picker sub-picker flex flex-ac flex-js">
-            <view class="fs32">所在科室</view>
-            <view class="flex flex-ac fs24 co939393">
-                <view>请选择</view>
-                <view class="right-icon">
-                    <image src="/assets/img/right.png" />
+        <view class="box sub-box backfff">
+        <!-- subjectList -->
+            <picker name="subIdx" bindchange="handleChangeSub" value="{{index}}" range-key="subject_name" range="{{subjectList}}">
+                <view class="picker sub-picker flex flex-ac flex-js">
+                    <view class="fs32">研究学科</view>
+                    <view class="flex flex-ac fs24 co939393">
+                        <view>{{subName}}</view>
+                        <view class="right-icon">
+                            <image src="/assets/img/right.png" />
+                        </view>
+                    </view>
                 </view>
+            </picker>
+            <view class="input-control">
+                <input class="fs28" type="text" placeholder="若未找到对应科室，请点击自行输入" placeholder-class="fs24 co939393" />
             </view>
         </view>
-        <view class="input-control">
-            <input class="fs28" type="text" placeholder="若未找到对应科室，请点击自行输入" placeholder-class="fs24 co939393" />
+        <view class="notes">
+            <textarea name="notes" placeholder="点击输入" placeholder-class="co939393" id="" cols="30" rows="10"></textarea>
         </view>
-    </view>
-    <view class="notes">
-        <textarea placeholder="点击输入" placeholder-class="co939393" id="" cols="30" rows="10"></textarea>
-    </view>
-    <view class="btn">
-        <view class="save">
-            <image src="/assets/img/save.png" />
+        <view class="btn">
+            <button class="save" form-type="submit">
+                <image src="/assets/img/save.png" />
+            </button>
         </view>
-    </view>
+    </form>
  </view>   
+ <toast id="toast"></toast>
