--- a/components/header/header.wxss
+++ b/components/header/header.wxss
@@ -16,7 +16,8 @@
 .header .back {
    position: absolute;
    left: 0;
-   
+   z-index: 999;
+
    width: 63rpx;
    height: 44rpx;
    padding: 10rpx 46rpx;
