--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -5,11 +5,11 @@
    <view class="bg-box">
       <image src="/assets/img/bg.png"></image>
    </view>
-   <header id="header"/>
+   <Header id="header"/>
    <view>
       <view wx:if="{{listFlag === 0}}" class="notebook-list" style="padding-top: {{hHeight}}px;padding-bottom: {{tHeight}}px;">
          <block wx:for="{{notebookList}}" wx:key="index">
-            <view class="notebook-item flex flex-ac flex-jc" bindtap="intoNoteList" data-id = "{{item.mean_cate_id}}">
+            <view class="notebook-item flex flex-ac flex-jc" bindtap="intoNoteList" data-id="{{item.mean_cate_id}}"  data-title="{{item.cate_name}}">
                <view class="notebook-item-block"></view>
                <view class="notebook-item-text fs32">{{item.cate_name}}</view>
                <view class="notebook-item-block"></view>
