--- a/pages/noteList/noteList.wxml
+++ b/pages/noteList/noteList.wxml
@@ -3,7 +3,7 @@
    <view class="bg-box">
       <image src="/assets/img/bg.png"></image>
    </view>
-   <header id = 'header'/>
-   <tabbar id = 'tabBar' bindmyevent="toggleList"/>
-   <danmu id = 'danmu' noteList="{{noteList}}" listFlag="{{listFlag}}"/>
+   <Header id='header' title="{{title}}" back add/>
+   <!-- <tabbar id='tabBar' bindmyevent="toggleList"/> -->
+   <danmu id='danmu' noteList="{{noteList}}" listFlag="{{listFlag}}"/>
 </view>
