--- a/app.wxss
+++ b/app.wxss
@@ -139,6 +139,7 @@ image {
    position: fixed;
    top: 0;
    left: 0;
+   z-index: 9999;
    width: 100%;
    height:100%;
    background-color: transparent;
