--- a/pages/noteList/note/note.wxss
+++ b/pages/noteList/note/note.wxss
@@ -17,6 +17,11 @@
 .notes{
     padding: 40rpx 46rpx;
 }
+.notes textarea {
+    width: 100%;
+    min-height: 450rpx;
+    line-height: 1.5;
+}
 .save {
     width: 147rpx;
     height: 67rpx;
