--- a/components/danmu/danmu.wxml
+++ b/components/danmu/danmu.wxml
@@ -8,11 +8,11 @@
             </view>
             <view class="note-right flex flex-col flex-ac flex-jc">
                <view class="note-right-top flex flex-ac flex-js">
-                  <view class="note-sub fs32">{{item.sub}}</view>
-                  <view class="note-item fs24 co939393">{{item.time}}</view>
+                  <view class="note-sub fs32 omission-only">{{item.notes}}</view>
+                  <view class="note-item fs24 co939393">{{item.create_time}}</view>
                </view>
                <view class="flex flex-ac flex-js">
-                  <view class="fs28 co939393">{{item.name + index}}</view>
+                  <view class="note-notes fs28 co939393 omission-only">{{item.notes}}</view>
                   <view class="right-icon">
                      <image src="/assets/img/right.png"></image>
                   </view>
@@ -21,7 +21,7 @@
          </view>
       </block>
       <view class="item-foot flex flex-jc">
-         <view class="no-more">
+         <view class="no-more" wx:if="{{isMore}}">
             <image src="/assets/img/no_more.png"></image>
          </view>
       </view>
