--- a/components/danmu/danmu.wxml
+++ b/components/danmu/danmu.wxml
@@ -29,14 +29,14 @@
    <view wx:if="{{listFlag === 2}}" class="note-list">
       <block wx:for="{{doommData}}" wx:key="id">
          <view wx:if="{{item.display}}" class="note-item-02" style="animation: first {{item.time}}s linear forwards;top:{{item.top}}px;">
-            <view class="flex flex-ac">
+            <view class="flex flex-ac pos-r">
                <view class="note-icon">
                   <image src="{{'/assets/img/note/note_icon1'+ item.icon + '.png'}}"></image>
                </view>
-               <view class="note-text-box pos-r">
-                  <view class="note-text"></view>
+               <view class="note-text-box flex flex-ac">
+                  <view class="note-text" style="background-color: {{item.bg}}">{{item.text}}</view>
                   <view class="note-bg">
-                     <image src="/assets/img/note/note_bg01.png"></image>
+                     <image src="/assets/img/note/icon_0{{item.icon}}.png"></image>
                   </view>
                </view>
             </view>
