--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -5,7 +5,7 @@
    <view class="bg-box">
       <image src="/assets/img/bg.png"></image>
    </view>
-   <Header id="header"/>
+   <Header id="header" bindconfirmkeyword="handleConfirmKeyword"/>
    <view>
       <view wx:if="{{listFlag === 0}}" class="notebook-list" style="padding-top: {{hHeight}}px;padding-bottom: {{tHeight}}px;">
          <block wx:for="{{notebookList}}" wx:key="index">
